syntax = "proto3";

import "models/users/auth.proto";

package domains.users.services.aggregation;
option go_package = "github.com/kirvader/BodyController/domains/users/services/aggregation/proto";

service Users {
  	rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
	rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
	rpc LogIn(LogInRequest) returns (LogInResponse);
}

message CreateUserRequest {
	models.users.auth.UserCredentials user_credentials = 1;
};

message CreateUserResponse {};

message DeleteUserRequest {
	string username = 1;
};

message DeleteUserResponse {};

message LogInRequest {
	models.users.auth.UserCredentials user_credentials = 1;
};

message LogInResponse {
	string token = 1;
};
